--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^10.1.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 coverage = "^7.3.2"
+pylint = "^3.0.2"
 
 [build-system]
 requires = ["poetry-core"]
